--- a/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.css
+++ b/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.css
@@ -17,9 +17,16 @@
     gap: 30%;
 
     font-style: italic;
-    font-size:1vw;
+    font-size: 20px;;
 
   }
+  .bio-row p {
+    color: #89817e;
+    font-weight: 400;
+    width: 100%;
+    font-size: 15px;
+  }
+
 
   .bio-row1 {         /*bilgiler2 bio rowları ayır*/
 
@@ -44,7 +51,7 @@
     font-style: italic;
     display: flex;
     flex-direction: column;
-    font-size:1vw;
+    font-size: 20px;;
   }
   .bio-row2 {         /*bilgiler2 bio rowları ayır*/
 
@@ -69,7 +76,7 @@
     font-style: italic;
     display: flex;
     flex-direction: column;
-    font-size:1vw;
+    font-size: 20px;;
   }
 
 
@@ -108,8 +115,6 @@
     width: 100%;
 
     font-size: 20px;
-    font-size:1vw;
-
   }
   #edit {
     background-color: #0c7e58; /* Arkaplan rengi */
