--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
@@ -7,7 +7,6 @@
       </ng-template>
     </p-toolbar>
  
-  
   <!--TABLE -->
   <p-table
       #dt
@@ -24,11 +23,11 @@
       <ng-template pTemplate="header">
 
           <tr>
-              <th pSortableColumn="name" style="width: 8%;" >Name <p-sortIcon field="name"></p-sortIcon></th>
-              <th style="width: 8%;">Image</th>
-              <th pSortableColumn="category" style="width: 5%;">Category <p-sortIcon field="category"></p-sortIcon></th>
-              <th pSortableColumn="rating" style="width: 3%;">Reviews <p-sortIcon field="rating"></p-sortIcon></th>
-              <th pSortableColumn="edit/delete" style="width: 3%;"> Edit/Delete </th>
+              <th pSortableColumn="name" style="width: 8%;" > Ad <p-sortIcon field="name"></p-sortIcon></th>
+              <th style="width: 8%;">Görsel</th>
+              <th pSortableColumn="category" style="width: 5%;">Kategori <p-sortIcon field="category"></p-sortIcon></th>
+              <th pSortableColumn="rating" style="width: 3%;"> Değerlendirme <p-sortIcon field="rating"></p-sortIcon></th>
+              <th pSortableColumn="edit/delete" style="width: 3%;"> Düzenle/Sil</th>
           </tr>
 
       </ng-template>
