--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.css
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.css
@@ -1,3 +1,7 @@
 .custom-button {
     background-color: #4BA47E !important;
 }
+
+.button-space {
+    margin-right: 8px; /* İstediğiniz boşluk miktarını burada ayarlayabilirsiniz */
+  }
