--- a/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.html
@@ -1,120 +1,113 @@
-<div class="row">
-  <div class="col-sm-12 col-md-6 mb-3">
-    <div class="card">
-      <div class="card-body">
-        <div class="bio-row">
-          <h6 style="font-size: 20px;">Adı:</h6>
-          <ng-container *ngIf="isEditing; else readOnlyAd">
-            <input type="text" [(ngModel)]="ad" class="form-control"style="width: 100%;">
-          </ng-container>
-          <ng-template #readOnlyAd>
-            <p>{{ ad }}</p>
-          </ng-template>
-        </div>
-        <div class="bio-row">
-          <h6 style="font-size: 20px;">Soyadı:</h6>
-          <ng-container *ngIf="isEditing; else readOnlySoyad">
-            <input type="text" [(ngModel)]="soyad" class="form-control"style="width: 100%;">
-          </ng-container>
-          <ng-template #readOnlySoyad>
-            <p>{{ soyad }}</p>
-          </ng-template>
-        </div>
-        <div class="bio-row">
-          <h6 style="font-size:20px;">Email:</h6>
-          <ng-container *ngIf="isEditing; else readOnlyEmail">
-            <input type="text" [(ngModel)]="email" class="form-control"style="width: 100%;">
-          </ng-container>
-          <ng-template #readOnlyEmail>
-            <p>{{ email }}</p>
-          </ng-template>
-        </div>
-        <div class="bio-row">
-          <h6 style="font-size:20px;">Doğum Tarihi:</h6>
-          <ng-container *ngIf="isEditing; else readOnlyBdate">
-            <input type="text" [(ngModel)]="bdate" class="form-control"style="width: 100%;">
-          </ng-container>
-          <ng-template #readOnlyBdate>
-            <p>{{ bdate }}</p>
-          </ng-template>
-        </div>
-        <div class="bio-row">
-          <h6 style="font-size:20px;">GSM:</h6>
-          <ng-container *ngIf="isEditing; else readOnlyGsm">
-            <input type="text" [(ngModel)]="gsm" class="form-control" style="width: 100%;">
-          </ng-container>
-          <ng-template #readOnlyGsm>
-            <p>{{ gsm }}</p>
-          </ng-template>
-        </div>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
+<body style="margin-top: 10vh !important;">
+  <div class="main-content">
+    <!-- Page content -->
+    <div class="container-fluid mt--7">
+      <div class="row">
+        <div class="col-xl-4 order-xl-2 mb-5 mb-xl-0">
+          <div class="card card-profile shadow">
+            <div class="row justify-content-center">
+              <div class="col-lg-3 order-lg-2">
+                <div class="card-profile-image">
+                  <a href="#">
+                    <img src="https://demos.creative-tim.com/argon-dashboard/assets-old/img/theme/team-4.jpg" class="rounded-circle">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-8 order-xl-1">
+          <div class="card bg-secondary shadow">
+            <div class="card-header bg-white border-0">
+              <div class="row align-items-center">
+                <div class="col-8">
+                  <h3 class="mb-0">Hesabım</h3>
+                </div>
+              </div>
+            </div>
+            <div class="card-body">
+              <form>
+                <h6 class="heading-small text-muted mb-4">Kullanıcı Bilgileri</h6>
+                <div class="pl-lg-4">
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <div class="form-group focused">
+                        <label class="form-control-label" for="input-username">Kullanıcı Adı</label>
+                        <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Kullanıcı Adın" value="Adoessuor">
+                      </div>
+                    </div>
+                    <div class="col-lg-6">
+                      <div class="form-group">
+                        <label class="form-control-label" for="input-email">E-mail adresi</label>
+                        <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="petship@example.com">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <div class="form-group focused">
+                        <label class="form-control-label" for="input-first-name">Ad</label>
+                        <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Adın" value="Dünya">
+                      </div>
+                    </div>
+                    <div class="col-lg-6">
+                      <div class="form-group focused">
+                        <label class="form-control-label" for="input-last-name">Soyadı</label>
+                        <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Soyadın" value="Düz">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="my-4">
+                <!-- Address -->
+                <h6 class="heading-small text-muted mb-4">İletişim Bilgileri</h6>
+                <div class="pl-lg-4">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="form-group focused">
+                        <label class="form-control-label" for="input-address">Adres</label>
+                        <input id="input-address" class="form-control form-control-alternative" placeholder="Ev Adresin" value="Hürriyet Mahallesi , Ata Sokak no:1881" type="text">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      <div class="form-group focused">
+                        <label class="form-control-label" for="input-city">Şehir</label>
+                        <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="Şehir" value="Ankara">
+                      </div>
+                    </div>
+                    <div class="col-lg-4">
+                      <div class="form-group focused">
+                        <label class="form-control-label" for="input-country">Ülke</label>
+                        <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Ülke" value="Türkiye">
+                      </div>
+                    </div>
+                    <div class="col-lg-4">
+                      <div class="form-group">
+                        <label class="form-control-label" for="input-country">Posta Kodu</label>
+                        <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="Posta Kodu">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="my-4">
+                <!-- Description -->
+                <h6 class="heading-small text-muted mb-4">Hakkımda</h6>
+                <div class="pl-lg-4">
+                  <div class="form-group focused">
+                    <label>Hakkımda</label>
+                    <textarea rows="4" class="form-control form-control-alternative" placeholder="Seninle ilgili bir kaç söz . . . ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, dolorem!</textarea>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-sm-12 col-md-6">
-    <div class="card">
-      <div class="card-body">
-        <div class="bio-row">
-          <h6 style="font-size:20px;">Cinsiyet:</h6>
-          <ng-container *ngIf="isEditing; else readOnlyField">
-            <input type="text" [(ngModel)]="gender" class="form-control" style="width: 100%;">
-          </ng-container>
-          <ng-template #readOnlyField>
-            <p>{{ gender }}</p>
-          </ng-template>
-        </div>
-        <div class="bio-row1">
-          <h6 style="font-size: 20px;">Konum:</h6>
-          <p style="font-size: 15px;">-</p>
-        </div>
-        <div class="bio-row1">
-          <h6 style="font-size:20px;">Şu an evcil hayvanınız var mı?</h6>
-          <label>
-            <input
-              type="radio"
-              name="evcil-hayvan1"
-              value="evet"
-              [(ngModel)]="selectedOption1"
-            />
-            Evet
 
-            <input style="margin-left: 15%;"
-              type="radio"
-              name="evcil-hayvan2"
-              value="hayır"
-              [(ngModel)]="selectedOption1"
-            />
-            Hayır
-          </label>
-        </div>
-
-        <div class="bio-row2">
-          <h6 style="font-size: 20px;" >Şu an evcil hayvanınız var mı?</h6>
-          <label>
-            <input
-              type="radio"
-              name="evcil-hayvan3"
-              value="evet"
-              [(ngModel)]="selectedOption2"
-            />
-            Evet
-
-            <input style="margin-left: 15%;"
-              type="radio"
-              name="evcil-hayvan4"
-              value="hayır"
-              [(ngModel)]="selectedOption2"
-            />
-            Hayır
-          </label>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-12">
-    <button id="edit" style="width: max-content" (click)="toggleEditing()">Düzenle</button>
-    <button id="update" [disabled]="!isEditing" style="margin-left: 10%;">Güncelle</button>
-  </div>
-</div>
+</body>
