--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 
 body {
   color: #797979;
-  background: #f1f2f7;
+  background: #eee;
   font-family: 'Open Sans', sans-serif;
   padding: 0px !important;
   margin: 0px !important;
