--- a/src/app/modules/auth/loginc/loginc.component.html
+++ b/src/app/modules/auth/loginc/loginc.component.html
@@ -1,60 +1,42 @@
-<div class="lottie-container" #lottieContainer></div>
-<div class="section">
-    <div class="container">
-        <div class="row full-height justify-content-center">
-            <div class="col-12 text-center align-self-center py-5">
-                <div class="section pb-5 pt-5 pt-sm-2 text-center">
-                    <h6  class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
-                    <input class="checkbox" type="checkbox" id="reg-log" name="reg-log"/>
-                    <label for="reg-log"></label>
-                    <div class="card-3d-wrap mx-auto">
-                        <div class="card-3d-wrapper">
-                            <div class="card-front">
-                                <div class="center-wrap">
-                                    <div class="section text-center">
-                                        <h4 style="color: aliceblue;" class="mb-4 pb-3">Log In</h4>
-                                        <form (submit)="login()" ngModelOptions="{standalone: true}">
-                                            <div class="form-group">
-                                                <input type="text" [(ngModel)]="loginRequest.Email"  name="username" placeholder="Kullanıcı Adı" class="form-style">
-                                                <i class="input-icon uil uil-at"></i>
-                                            </div>
-                                            <div class="form-group mt-2">
-                                                <input type="password" [(ngModel)]="loginRequest.Password" name="password" placeholder="Şifre" class="form-style">
-                                                <i class="input-icon uil uil-lock-alt"></i>
-                                            </div>
+<div  style="display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #F2F2F2;">
+    <div class="card shadow" style="width: 100%; max-width: 500px; height: 400px;">
+        <div class="card-body" >
+            <div class="mt-2" style=" height: 100px; display: flex; align-items: center; justify-content: center;">
+                <h1>Petshipe Hoşgeldiniz</h1>
+            </div>
+            <form (submit)="login()" ngModelOptions="{standalone: true}">
 
-                                            <button type="submit" pButton pRipple  label="Success" class="btn mt-4" (click)="login()">Giriş yap</button>
-                                            <!-- (click)="showSuccess()" -->
-                                        </form>
-
-                                        <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-back">
-                                <div class="center-wrap">
-                                    <div class="section text-center">
-                                        <h4 style="color: aliceblue;" class="mb-4 pb-3">Sign Up</h4>
-                                        <div class="form-group">
-                                            <input type="text" name="logname" class="form-style" placeholder="Your Full Name" id="logname" autocomplete="off">
-                                            <i class="input-icon uil uil-user"></i>
-                                        </div>
-                                        <div class="form-group mt-2">
-                                            <input type="email" name="logemail" class="form-style" placeholder="Your Email" id="logemail" autocomplete="off">
-                                            <i class="input-icon uil uil-at"></i>
-                                        </div>
-                                        <div class="form-group mt-2">
-                                            <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
-                                            <i class="input-icon uil uil-lock-alt"></i>
-                                        </div>
-                                        <a href="#" class="btn mt-4">submit</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+            <div class="row" style="display: flex; justify-content: center;">
+                <div class="col-8 mb-3 mt-3" >
+                    <div class="p-inputgroup">
+                        <span class="p-inputgroup-addon">
+                            <i class="pi pi-at"></i>
+                        </span>
+                        <input name="username" pInputText placeholder="E-posta adresi" [(ngModel)]="loginRequest.Email" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
                     </div>
                 </div>
             </div>
+           
+            <div class="row" style="display: flex; justify-content: center;">
+                <div class="col-8 mb-3">
+                    <div class="p-inputgroup">
+                        <span class="p-inputgroup-addon">
+                            <i class="pi pi-lock"></i>
+                        </span>
+                        <input pInputText placeholder="Şİfre" name="password"  class="w-100" [(ngModel)]="loginRequest.Password" style="border: solid 1px  rgba(181, 181, 181, 0.267);"/>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="row mt-auto" style="display: flex; justify-content: center;">
+                <div class="col-8">
+                    <button class="btn btn-primary" type="submit" style="width: 100%;"  (click)="login()">Giriş yap</button>
+                </div>
+            </div>
+        </form>
         </div>
+        
     </div>
+    <div #lottieContainer style="width: 20%; position: absolute; top: 220px; right: 0; bottom: 0; left: 55%;"></div>
+  
 </div>
