--- a/src/app/modules/auth/loginc/loginc.component.html
+++ b/src/app/modules/auth/loginc/loginc.component.html
@@ -1,42 +1,135 @@
-<div  style="display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #F2F2F2;">
-    <div class="card shadow" style="width: 100%; max-width: 500px; height: 400px;">
-        <div class="card-body" >
-            <div class="mt-2" style=" height: 100px; display: flex; align-items: center; justify-content: center;">
-                <h1>Petshipe Hoşgeldiniz</h1>
-            </div>
-            <form (submit)="login()" ngModelOptions="{standalone: true}">
-
-            <div class="row" style="display: flex; justify-content: center;">
-                <div class="col-8 mb-3 mt-3" >
-                    <div class="p-inputgroup">
-                        <span class="p-inputgroup-addon">
-                            <i class="pi pi-at"></i>
-                        </span>
-                        <input name="username" pInputText placeholder="E-posta adresi" [(ngModel)]="loginRequest.Email" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
-                    </div>
-                </div>
-            </div>
-           
-            <div class="row" style="display: flex; justify-content: center;">
-                <div class="col-8 mb-3">
-                    <div class="p-inputgroup">
-                        <span class="p-inputgroup-addon">
-                            <i class="pi pi-lock"></i>
-                        </span>
-                        <input pInputText placeholder="Şİfre" name="password"  class="w-100" [(ngModel)]="loginRequest.Password" style="border: solid 1px  rgba(181, 181, 181, 0.267);"/>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="row mt-auto" style="display: flex; justify-content: center;">
-                <div class="col-8">
-                    <button class="btn btn-primary" type="submit" style="width: 100%;"  (click)="login()">Giriş yap</button>
-                </div>
-            </div>
-        </form>
-        </div>
-        
+<div  style="display: flex; justify-content: center; align-items: center; flex-direction: column; height: 100vh; background-color: #F2F2F2;">
+    <div  style=" height: 200px; display: flex; align-items: center; justify-content: center;">
+        <div #lottieContainer style="width: 40%;"></div>
     </div>
-    <div #lottieContainer style="width: 20%; position: absolute; top: 220px; right: 0; bottom: 0; left: 55%;"></div>
-  
+    <div class="card shadow flip-card " [ngClass]="{'login-card': isLoginFormVisible , 'register-card': !isLoginFormVisible}">  
+        <div class="card-body"  >
+                <div style="height: 100%; display: flex; flex-direction: column;  justify-content: center;">
+                    <div class="form-check form-switch" style="display: flex; justify-content: center; align-items: center;">
+                        <input  (click)="toggleForm()" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <label style="margin-left: 15px;" class="form-check-label " for="flexSwitchCheckDefault">{{ isLoginFormVisible ? 'Login' : 'Register' }}</label>
+                    </div>
+                    <form  *ngIf="isLoginFormVisible" (submit)="login()" ngModelOptions="{standalone: true}">
+                    <div class="row" style="display: flex; justify-content: center; ">
+                        <div class="col-9 mb-3 mt-3" >
+                            <div class="p-inputgroup">
+                                <span class="p-inputgroup-addon">
+                                    <i class="pi pi-user"></i>
+                                </span>
+                                <input name="username" pInputText placeholder="E-posta adresi" [(ngModel)]="loginRequest.Email" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" style="display: flex; justify-content: center;">
+                        <div class="col-9 mb-3">
+                            <div class="p-inputgroup">
+                                <span class="p-inputgroup-addon">
+                                    <i class="pi pi-lock"></i>
+                                </span>
+                                <input pInputText placeholder="Şİfre" name="password"  class="w-100" [(ngModel)]="loginRequest.Password" style="border: solid 1px  rgba(181, 181, 181, 0.267);"/>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="row mt-auto" style="display: flex; justify-content: center;">
+                        <div class="col-9">
+                            <button class="btn btn-primary" type="submit" style="width: 100%;"  (click)="login()">Giriş yap</button>
+                        </div>
+                    </div>
+                    </form>
+                <form *ngIf="!isLoginFormVisible" (submit)="register()" ngModelOptions="{standalone: true}">
+                    
+                    
+                    <div class="row" style="display: flex; justify-content: center;">
+                            <div class="col-5 mb-2 mt-3">
+                                <span class="p-float-label">
+                                    <input name="UserName" pInputText placeholder="Adınızı Giriniz" [(ngModel)]="registerRequest.UserName" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                                    <label htmlFor="username">Adınızı Giriniz</label>
+                                </span>
+                                        
+                            </div>
+                            <div class="col-5 mb-2 mt-3">
+                                <span class="p-float-label">
+                                    <input name="user_surname" pInputText placeholder="Soyadınızı Giriniz" [(ngModel)]="registerRequest.user_surname" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                                    <label htmlFor="username">Soyadınızı giriniz</label>
+                                </span>                   
+                            </div>
+                    </div>             
+                    <div class="row" style="display: flex; justify-content: center;">
+                        <div class="col-5 mb-2 mt-3"  >   
+                            <span class="p-float-label">
+                                <input name="user_bdate" pInputText  [(ngModel)]="registerRequest.user_bdate" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                                <label htmlFor="username">Doğum Tarihinizi Giriniz</label>
+                            </span>  
+                        </div>
+                        <div class="col-5 mb-2 mt-3">
+                                <span class="p-float-label">
+                                    <input name="username" pInputText  [(ngModel)]="registerRequest.user_adress" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                                    <label htmlFor="username">İl/İlçe Giriniz</label>
+                                </span>
+                            </div>                       
+                </div>
+                <div class="row" style="display: flex; justify-content: center;">
+                    <div class="col-5 mb-2 " style="display: flex; justify-content: space-between; align-items:center;">
+                        <div class="flex align-items-center">
+                            <p-radioButton   name="pizza" value="k" [(ngModel)]="registerRequest.user_sex" inputId="k"></p-radioButton>
+                            <label  style="margin-left: 15px;" for="k" >Kadın</label>
+                        </div>
+                        <div class="flex align-items-center">
+                            <p-radioButton name="pizza" value="e" [(ngModel)]="registerRequest.user_sex" inputId="e"></p-radioButton>
+                            <label style="margin-left: 15px;"  for="e" >Erkek</label>
+                        </div>
+                            
+                    </div>
+                    <div class="col-5 mb-2 mt-3">
+                        <span class="p-float-label">
+                            <input name="user_gsm" pInputText [(ngModel)]="registerRequest.user_gsm" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                            <label htmlFor="username">Telefon numaranızı giriniz</label>
+                        </span>
+                        <!-- <span class="p-float-label">
+                            <p-inputMask  mask="999-999-9999" [(ngModel)]="registerRequest.user_gsm"  id="ssn_input" ></p-inputMask>
+                            <label htmlFor="ssn_input">Telefon numaranızı giriniz</label>
+                        </span>                      -->
+                    </div>
+            </div>
+            <div class="row" style="display: flex; justify-content: center;">
+                <div class="col-5 mb-2 mt-3" >
+                    <div class="w-100" style="display: flex; justify-content: space-between; align-items: center;">
+                        <p-dropdown class="w-100" name="animal_exist" [(ngModel)]="registerRequest.animal_exist" [options]="animalExitsOptions" optionLabel="label" styleClass="w-100"></p-dropdown>
+                    </div>            
+                </div>
+                <div class="col-5 mb-2 mt-3" style="display: flex;" >
+
+                    <div class="w-100" style="display: flex; justify-content: space-between; align-items: center;">
+                        <p-dropdown class="w-100" name="animal_history" [(ngModel)]="registerRequest.animal_history" [options]="animalHistoryOptions" optionLabel="label" styleClass="w-100"></p-dropdown>
+
+                    </div>   
+                        
+                </div>
+        </div>
+        <div class="row" style="display: flex; justify-content: center;">
+            <div class="col-5 mb-2 mt-3">
+                <span class="p-float-label">
+                    <input name="Email" pInputText placeholder="E-posta adresi" [(ngModel)]="registerRequest.Email" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                    <label htmlFor="username">E-posta adresi</label>
+                </span>                   
+            </div>
+            <div class="col-5 mb-2 mt-3">
+                <span class="p-float-label">
+                    <input name="Password" pInputText placeholder="şifre giriniz" [(ngModel)]="registerRequest.Password" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                    <label htmlFor="username">Şifre Giriniz</label>
+                </span>                     
+            </div>
+            </div>
+                
+            <div class="row mt-auto" style="display: flex; justify-content: center;">
+                <div class="col-8 mt-3">
+                    <button class="btn btn-primary" type="submit" style="width: 100%;"  (click)="register()">Üye ol</button>
+                </div>
+                </div>
+        </form>
+       </div>
+    </div>
+
+    </div>
 </div>
