--- a/src/app/modules/auth/loginc/loginc.component.html
+++ b/src/app/modules/auth/loginc/loginc.component.html
@@ -1,16 +1,16 @@
-<div  style="display: flex; justify-content: center; align-items: center; flex-direction: column; height: 100vh; background-color: #F2F2F2;">
-    <div  style=" height: 200px; display: flex; align-items: center; justify-content: center;">
-        <div #lottieContainer style="width: 40%;"></div>
+<div class="login-container">
+    <div class="login-animation-container">
+        <div #lottieContainer style="width: 400px;"></div>
     </div>
     <div class="card shadow flip-card " [ngClass]="{'login-card': isLoginFormVisible , 'register-card': !isLoginFormVisible}">  
         <div class="card-body"  >
-                <div style="height: 100%; display: flex; flex-direction: column;  justify-content: center;">
-                    <div class="form-check form-switch" style="display: flex; justify-content: center; align-items: center;">
+                <div class="card-detail">
+                    <div class="form-check form-switch">
                         <input  (click)="toggleForm()" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                         <label style="margin-left: 15px;" class="form-check-label " for="flexSwitchCheckDefault">{{ isLoginFormVisible ? 'Login' : 'Register' }}</label>
                     </div>
                     <form  *ngIf="isLoginFormVisible" (submit)="login()" ngModelOptions="{standalone: true}">
-                    <div class="row" style="display: flex; justify-content: center; ">
+                    <div class="row">
                         <div class="col-9 mb-3 mt-3" >
                             <div class="p-inputgroup">
                                 <span class="p-inputgroup-addon">
@@ -20,7 +20,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row" style="display: flex; justify-content: center;">
+                    <div class="row" >
                         <div class="col-9 mb-3">
                             <div class="p-inputgroup">
                                 <span class="p-inputgroup-addon">
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     
-                    <div class="row mt-auto" style="display: flex; justify-content: center;">
+                    <div class="row mt-auto" >
                         <div class="col-9">
                             <button class="btn btn-primary" type="submit" style="width: 100%;"  (click)="login()">Giriş yap</button>
                         </div>
@@ -40,7 +40,7 @@
                 <form *ngIf="!isLoginFormVisible" (submit)="register()" ngModelOptions="{standalone: true}">
                     
                     
-                    <div class="row" style="display: flex; justify-content: center;">
+                    <div class="row" >
                             <div class="col-5 mb-2 mt-3">
                                 <span class="p-float-label">
                                     <input name="UserName" pInputText placeholder="Adınızı Giriniz" [(ngModel)]="registerRequest.UserName" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
@@ -55,7 +55,7 @@
                                 </span>                   
                             </div>
                     </div>             
-                    <div class="row" style="display: flex; justify-content: center;">
+                    <div class="row" >
                         <div class="col-5 mb-2 mt-3"  >   
                             <span class="p-float-label">
                                 <input name="user_bdate" pInputText  [(ngModel)]="registerRequest.user_bdate" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
@@ -69,8 +69,8 @@
                                 </span>
                             </div>                       
                 </div>
-                <div class="row" style="display: flex; justify-content: center;">
-                    <div class="col-5 mb-2 " style="display: flex; justify-content: space-between; align-items:center;">
+                <div class="row" >
+                    <div class="col-5 mb-2 radio-container ">
                         <div class="flex align-items-center">
                             <p-radioButton   name="pizza" value="k" [(ngModel)]="registerRequest.user_sex" inputId="k"></p-radioButton>
                             <label  style="margin-left: 15px;" for="k" >Kadın</label>
@@ -92,22 +92,19 @@
                         </span>                      -->
                     </div>
             </div>
-            <div class="row" style="display: flex; justify-content: center;">
+            <div class="row" >
                 <div class="col-5 mb-2 mt-3" >
-                    <div class="w-100" style="display: flex; justify-content: space-between; align-items: center;">
+                    <div class="dropdown-container w-100" >
                         <p-dropdown class="w-100" name="animal_exist" [(ngModel)]="registerRequest.animal_exist" [options]="animalExitsOptions" optionLabel="label" styleClass="w-100"></p-dropdown>
                     </div>            
                 </div>
                 <div class="col-5 mb-2 mt-3" style="display: flex;" >
-
-                    <div class="w-100" style="display: flex; justify-content: space-between; align-items: center;">
+                    <div class="dropdown-container w-100">
                         <p-dropdown class="w-100" name="animal_history" [(ngModel)]="registerRequest.animal_history" [options]="animalHistoryOptions" optionLabel="label" styleClass="w-100"></p-dropdown>
-
                     </div>   
-                        
                 </div>
         </div>
-        <div class="row" style="display: flex; justify-content: center;">
+        <div class="row" >
             <div class="col-5 mb-2 mt-3">
                 <span class="p-float-label">
                     <input name="Email" pInputText placeholder="E-posta adresi" [(ngModel)]="registerRequest.Email" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
@@ -122,8 +119,8 @@
             </div>
             </div>
                 
-            <div class="row mt-auto" style="display: flex; justify-content: center;">
-                <div class="col-8 mt-3">
+            <div class="row mt-auto register-btn-container">
+                <div class="col-10 mt-3">
                     <button class="btn btn-primary" type="submit" style="width: 100%;"  (click)="register()">Üye ol</button>
                 </div>
                 </div>
