--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.css
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.css
@@ -5,3 +5,7 @@
 .button-space {
     margin-right: 8px; /* İstediğiniz boşluk miktarını burada ayarlayabilirsiniz */
   }
+
+  table{
+    width:90%;
+  }
