user-list table

--- a/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
@@ -5,7 +5,7 @@
             [rows]="5"
             [tableStyle]="{ 'min-width': '50rem' }"
             [rowsPerPageOptions]="[5, 10]"
-            [value]="customers" sortField="representative.name" sortMode="single" dataKey="representative.name" rowGroupMode="subheader" groupRowsBy="representative.name" [tableStyle]="{'min-width': '50rem'}">
+            [value]="users" sortField="representative.name" sortMode="single" dataKey="representative.name" rowGroupMode="subheader" groupRowsBy="representative.name" [tableStyle]="{'min-width': '50rem'}">
             <ng-template pTemplate="header">
                 <tr>
                     <th style="width:15%">Kullanıcı</th>
@@ -14,38 +14,36 @@
                     <th style="width:15%">İlan tarihi</th>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="groupheader" let-customer let-rowIndex="rowIndex" let-expanded="expanded">
-                    <tr>
+            <ng-template pTemplate="groupheader"  let-rowIndex="rowIndex" let-expanded="expanded">
+                    <tr *ngFor="let user of users">
                         <td colspan="5">
-                            <div style="display: flex; justify-content: space-between;" >
-                                <div *ngFor="let user of users">
-                                    <button type="button" pButton pRipple [pRowToggler]="customer" class="p-button-text p-button-rounded p-button-plain mr-2" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
-                                    <img [alt]="customer.representative.name" src="https://primefaces.org/cdn/primeng/images/demo/avatar/{{customer.representative.image}}" width="32" style="vertical-align: middle; margin-right: 15px;" />
+                            <div  style="display: flex; justify-content: space-between;" >
+                                <div >
+                                    <button type="button" pButton pRipple [pRowToggler]="user" class="p-button-text p-button-rounded p-button-plain mr-2" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
+                                    <img [alt]="" src="" width="32" style="vertical-align: middle; margin-right: 15px;" />
                                     <span class="font-bold ml-2">{{user.userName}}</span>
 
-                                <div>
-                                    <button (click)="onDelete(user.id)" pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"></button>
                                 </div>
-                            </div>   
-                                                            </div>
-             
+                                <div>
+                                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="onDelete(user.id)"></button>
+                                </div>
+                            </div>                
                         </td>
                     </tr>
             </ng-template>
-            <ng-template pTemplate="rowexpansion" let-customer>
-
+            <ng-template pTemplate="rowexpansion" let-category>
                 <tr>
                     <td>
-                        {{customer.name}}
+                        {{category.category_name}}
                     </td>
                     <td>
-                        <span class="ml-1 vertical-align-middle">{{customer.country.name}}</span>
+                        ilan adı
                     </td>
                     <td>
-                        <p-tag [value]="customer.status" [severity]="getSeverity(customer.status)"></p-tag>
+                        ilan durumu 
                     </td>
                     <td>
-                        {{customer.date}}
+                        ilan tarihi
                     </td>
                 </tr>
             </ng-template>
