about lottie refactor

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -3,7 +3,9 @@
   <div class="card mb-3" id="about">
     <div class="row g-0">
       <div class="col-md-6">
-        <div class="lottie-container" #lottieContainer></div>
+        <div class="lottie-container" #lottieContainer>
+          
+        </div>
       </div>
       <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
         <div class="card-body" style="text-align: center; max-width: 550px;">
