--- a/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
@@ -31,13 +31,13 @@
                         </td>
                     </tr>
             </ng-template>
-            <ng-template pTemplate="rowexpansion" let-category>
+            <ng-template pTemplate="rowexpansion" let-advert>
                 <tr>
                     <td>
-                        {{category.category_name}}
+                        {{advert.advert_title}}
                     </td>
                     <td>
-                        ilan adı
+                        {{advert.advert_text}}
                     </td>
                     <td>
                         ilan durumu 
