--- a/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
@@ -19,8 +19,8 @@
                         <td colspan="5">
                             <div  style="display: flex; justify-content: space-between;" >
                                 <div >
-                                    <button type="button" pButton pRipple [pRowToggler]="user" class="p-button-text p-button-rounded p-button-plain mr-2" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
-                                    <img [alt]="" src="" width="32" style="vertical-align: middle; margin-right: 15px;" />
+                                    <button type="button" pButton pRipple [pRowToggler]="user.id" class="p-button-text p-button-rounded p-button-plain mr-2" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
+                                    <img [src]="'assets/images/dog.png'"  width="32" style="vertical-align: middle; margin-right: 15px;"/>
                                     <span class="font-bold ml-2">{{user.userName}}</span>
 
                                 </div>
@@ -31,22 +31,27 @@
                         </td>
                     </tr>
             </ng-template>
-            <ng-template pTemplate="rowexpansion" let-advert>
+            <ng-template pTemplate="rowexpansion" let-users>
                 <tr>
+                  <ng-container>
+                <!-- <tr *ngFor="let advert of user.adverts">
+                    <ng-container *ngIf="advert.userId === user.id"> -->
                     <td>
-                        {{advert.advert_title}}
+                      {{users.userName}}
                     </td>
                     <td>
-                        {{advert.advert_text}}
+                        ilan durumu
                     </td>
                     <td>
-                        ilan durumu 
+                      ilan durumu
                     </td>
                     <td>
-                        ilan tarihi
+                      ilan tarihi
                     </td>
+                  </ng-container>
                 </tr>
-            </ng-template>
+              </ng-template>
+              
         </p-table>
     </div>
 </div>
