--- a/src/app/components/pagess/profile/profile-panel/categories-listes/categories-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/categories-listes/categories-listes.component.html
@@ -56,7 +56,7 @@
                 </td>
 
                 <td>
-                    <p-button icon="pi pi-times" styleClass="p-button-rounded p-button-danger p-button-text"></p-button>
+                    <p-button icon="pi pi-times" styleClass="p-button-rounded p-button-danger p-button-text" (onClick)="onDelete"></p-button>
                 </td>
                
                 
